# GEC

./: .gitignore  .gitignore1  CMakeLists.txt  README.md  StdAtm.h  conductivity.h  geomagnetic.cpp  geomagnetic.h  integral.cpp  integral.h  main.cpp  main.patch  sigma.h  std_atm.h
cnpy/: .gitignore
data/: create_non-cumulative_pw.py  ipython.html
irbem/: CMakeLists.txt
plots/: alt.npy  annual_variation.py  annual_variation.txt  charge_test.py  cond.txt  cond_comp_plot.py  cond_plot.py  diurnal_variation.py  my_atm_plot.py  phi_wos.txt  phi_ws.txt  potential_2_columns_plot.py  untitled0.py
